added new icon and image

--- a/popup.html
+++ b/popup.html
@@ -30,10 +30,10 @@
 </head>
   <body>
     <div>
-      <img src="./assets/bunny.png" alt="pet">
+      <img src="./assets/images/otter.png" alt="pet">
     </div>
     <div id="timer">25:00</div>
-    <img id="start" class = "hoverable "src = "assets/play.png" width="30" height="30">
+    <img id="start" class = "hoverable "src = "assets/images/play.png" width="30" height="30">
     <button id="reset">Reset</button>
     
     <script src="popup.js"></script>
